| Bug #57307 | Incorrect handling of scan-abort in DBTC | ||
|---|---|---|---|
| Submitted: | 7 Oct 2010 11:16 | Modified: | 7 Oct 2010 11:37 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[7 Oct 2010 11:16]
Jonas Oreland
[7 Oct 2010 11:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/120234 3840 Jonas Oreland 2010-10-07 ndb - bug#57307 - only look at m_scan_frag_conf_status when aborting scans in DBTC
[7 Oct 2010 11:27]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.20 (revid:jonas@mysql.com-20101007112422-bf6wxo3x16k76szh) (version source revid:jonas@mysql.com-20101007112422-bf6wxo3x16k76szh) (merge vers: 5.1.47-ndb-7.0.20) (pib:21)
[7 Oct 2010 11:37]
Jonas Oreland
pushed to 7.0.20, 7.1.9 and since this have no user visible effect. i'll close it wo/ docs
