ndb - bug#57307 - only look at m_scan_frag_conf_status when aborting scans in DBTC